OBMFULL-5662 use Concurrent Mark & Sweep GC
(cherry picked from commit 8124a206b3bf45c59b9e407d97f408de88fd023e)